Closed Bug 1223258 Opened 9 years ago Closed 9 years ago

Fix -Wunreachable-code warnings in widget

Categories

(Core :: Widget, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

Details

Attachments

(1 file)

clang warning:

widget/tests/TestAppShellSteadyState.cpp:397:5: warning: code will never be executed [-Wunreachable-code]

MSVC warnings:

widget\widgetutils.cpp(95) : warning C4702: unreachable code
widget\mouseevents.h(97) : warning C4702: unreachable code
widget\textevents.h(492) : warning C4702: unreachable code
Attachment #8685238 - Flags: review?(masayuki)
Comment on attachment 8685238 [details] [diff] [review]
Wunreachable-code_widget.patch

Sorry, I forgot to review this...
Attachment #8685238 - Flags: review?(masayuki) → review+
https://hg.mozilla.org/mozilla-central/rev/0bff869df8f6
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: